--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Zekun Wu"
   pronouns         : # example: "she/her"  
-  bio              : "I'm a Ph.D. student working at the Computational Interaction Lab, Saarland University. My current research interest is mainly focused in analyzing and predicting user's fixations when interacting with interface. Before moving to the Germany, I also have few research experience in huamn reliability analysis and data visualization."
+  bio              : # example""
   location         : "Saarbrücken, Saarland, Germany"
   employer         : "Saarland University"
   uri              : # URL
