--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "Zekun Wu.png"
+  avatar           : "Zekun Wu.jpg"
   name             : "Zekun Wu"
   pronouns         : # example: "she/her"  
   bio              : # example""
