--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,6 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Portfolio"
+  - title: "Projects"
     url: /portfolio/
         
