Fixed CV link to open PDF directly, disabled CV page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,5 +12,5 @@ main:
     url: /portfolio/
     
   - title: "CV"
-    url: /files/CV_Zekun_Wu.pdf
+    url: https://zekunwu.com/files/CV_Zekun_Wu.pdf
         
