Update publications page: remove categories, list by year, double width, remove badges,

--- a/_config.yml
+++ b/_config.yml
@@ -75,13 +75,13 @@ author:
   zhihu            : # Username
 
 # Publication Category - The following the list of publication categories and their headings
-publication_category:
-  conferences:
-    title: 'Conference Papers'
-  manuscripts:
-    title: 'Journal Articles'        
-  books:
-    title: 'Books'
+# publication_category:
+#   conferences:
+#     title: 'Conference Papers'
+#   manuscripts:
+#     title: 'Journal Articles'        
+#   books:
+#     title: 'Books'
 
 
 # Site Settings
